# world-bank-data-mcp

./: .gitignore  README.md  mcp.json  pyproject.toml  requirements.txt  search_agent.py  smithery.json  smithery.yaml
.claude/documents/: cache-system-implementation-guide.md  data360_api.json  mcp-connector.md  remote-mcp-servers.md
src/world_bank_mcp/: __main__.py  metadata_indicators.json  popular_indicators.json  server.py
world_bank_mcp/: __init__.py  server.py
