[project]
name = "world-bank-mcp"
version = "1.0.0"
description = "MCP server for World Bank Data360 API"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.scripts]
world-bank-mcp = "world_bank_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["world_bank_mcp"]
