[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "world-bank-mcp"
version = "1.0.0"
description = "Search 1,000+ World Bank economic and social indicators for 200+ countries. Filter by year, country, and demographics to access 60+ years of historical data."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "mcp>=1.15.0",
    "smithery>=0.4.2",
    "requests>=2.31.0",
    "pydantic>=2.0.0",
]

[project.scripts]
dev = "smithery.cli.dev:main"
playground = "smithery.cli.playground:main"

[tool.smithery]
server = "world_bank_mcp.server:create_server"

[tool.hatch.build.targets.wheel]
packages = ["src/world_bank_mcp"]
